fixed the width of the Overflowmenu in thee search table

--- a/frontend/src/components/SilvicultureSearch/Openings/SearchScreenDataTable/styles.scss
+++ b/frontend/src/components/SilvicultureSearch/Openings/SearchScreenDataTable/styles.scss
@@ -33,6 +33,15 @@
     align-items: center;
   }
   
+  
+}
+
+//Need to find selector for specific screen
+.bx--overflow-menu-options{
+  width:260px !important
+}
+.bx--overflow-menu-options__option-content {
+  overflow:visible;
 }
  
 .activity-table {
